; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_hcd.c_dwc2_hc_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/dwc2/extr_hcd.c_dwc2_hc_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc2_hsotg = type { i32 }
%struct.dwc2_host_chan = type { i32, i32, i64 }

@HCINTMSK_RESERVED14_31 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dwc2_hc_cleanup(%struct.dwc2_hsotg* %0, %struct.dwc2_host_chan* %1) #0 {
  %3 = alloca %struct.dwc2_hsotg*, align 8
  %4 = alloca %struct.dwc2_host_chan*, align 8
  %5 = alloca i32, align 4
  store %struct.dwc2_hsotg* %0, %struct.dwc2_hsotg** %3, align 8
  store %struct.dwc2_host_chan* %1, %struct.dwc2_host_chan** %4, align 8
  %6 = load %struct.dwc2_host_chan*, %struct.dwc2_host_chan** %4, align 8
  %7 = getelementptr inbounds %struct.dwc2_host_chan, %struct.dwc2_host_chan* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  %8 = load %struct.dwc2_host_chan*, %struct.dwc2_host_chan** %4, align 8
  %9 = getelementptr inbounds %struct.dwc2_host_chan, %struct.dwc2_host_chan* %8, i32 0, i32 1
  %10 = call i32 @list_del_init(i32* %9)
  %11 = load %struct.dwc2_hsotg*, %struct.dwc2_hsotg** %3, align 8
  %12 = load %struct.dwc2_host_chan*, %struct.dwc2_host_chan** %4, align 8
  %13 = getelementptr inbounds %struct.dwc2_host_chan, %struct.dwc2_host_chan* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @HCINTMSK(i32 %14)
  %16 = call i32 @dwc2_writel(%struct.dwc2_hsotg* %11, i32 0, i32 %15)
  store i32 -1, i32* %5, align 4
  %17 = load i32, i32* @HCINTMSK_RESERVED14_31, align 4
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %5, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %5, align 4
  %21 = load %struct.dwc2_hsotg*, %struct.dwc2_hsotg** %3, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load %struct.dwc2_host_chan*, %struct.dwc2_host_chan** %4, align 8
  %24 = getelementptr inbounds %struct.dwc2_host_chan, %struct.dwc2_host_chan* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @HCINT(i32 %25)
  %27 = call i32 @dwc2_writel(%struct.dwc2_hsotg* %21, i32 %22, i32 %26)
  ret void
}

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @dwc2_writel(%struct.dwc2_hsotg*, i32, i32) #1

declare dso_local i32 @HCINTMSK(i32) #1

declare dso_local i32 @HCINT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
